# mxfactorial

./: .babelrc  .dockerignore  .editorconfig  .eslintrc  .firebaserc  .gitignore  .gitpod.yml  .travis.yml  CLAUDE.md  Cargo.toml  README.md  apidoc.json  app.js  app.yaml  config.js  database.rules.json  firebase-db.js  go.mod  go.sum  index.html  inventory  karma.conf.js  main.js  main.py  makefile  mxfactorial-test-edb14399d2e8.json  mxfactorial.ipynb  package.json  project.json  project.yaml  requirements.txt  webpack.config.dev.js  webpack.config.js  webpack.config.prod.js
.agents/: onboard.md
.cargo/: config.toml
.circleci/: Dockerfile  config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  codecov.yml  copilot-instructions.md
account/: crud.js
apidoc/: api_data.js  api_data.json  api_project.js  api_project.json
app/: auth-hooks.js  axios-client-instance.js  client.js  extract-jwt.js  index.js  routes.js  theme.js
client/: README.md  entrypoint.sh  eslint.config.js  makefile  nginx.conf  package-lock.json  package.json  playwright.base.config.ts  playwright.config.ts  rollup.config.js  run.sh  svelte.config.js  tsconfig.json  vite.config.ts
crates/cache/: Cargo.toml  README.md  makefile
crates/cache/src/: ddb.rs  lib.rs  redis.rs
crates/cognitoidp/: Cargo.toml
crates/cognitoidp/src/: lib.rs
crates/ddbclient/: Cargo.toml
crates/ddbclient/src/: lib.rs
crates/httpclient/: Cargo.toml
crates/httpclient/src/: lib.rs
crates/pg/: Cargo.toml  makefile
crates/pg/src/: lib.rs  model.rs  postgres.rs  sqls.rs
crates/pg/src/sqls/: account.rs  approval.rs  balance.rs  common.rs  cte.rs  profile.rs  rule_instance.rs  transaction.rs  transaction_item.rs
crates/pg/testdata/: transaction_insert.golden
crates/pubsub/: Cargo.toml  README.md
crates/pubsub/src/: lib.rs  redis.rs  sns.rs
crates/queue/: Cargo.toml  README.md
crates/queue/src/: lib.rs  redis.rs  sqs.rs
crates/redisclient/: Cargo.toml  README.md  makefile
crates/redisclient/src/: lib.rs
crates/service/: Cargo.toml
crates/service/src/: lib.rs
crates/types/: Cargo.toml  README.md
crates/types/src/: account.rs  account_role.rs  approval.rs  balance.rs  lib.rs  request_response.rs  rule.rs  time.rs  transaction.rs  transaction_item.rs
cue/: README.md  project_conf.cue
docker/: .gitpod.Dockerfile  auto-confirm.Dockerfile  auto-transact.Dockerfile  balance-by-account.Dockerfile  bitnami-postgres.Dockerfile  client-base.Dockerfile  client.Dockerfile  compose.balance-by-account.yaml  compose.bitnami-postgres.yaml  compose.client.yaml  compose.graphql.yaml  compose.request-approve.yaml  compose.request-by-id.yaml  compose.request-create.yaml  compose.requests-by-account.yaml  compose.rule.yaml  compose.rules.yaml  compose.transaction-by-id.yaml  compose.transactions-by-account.yaml  compose.yaml  event.Dockerfile  go-migrate.Dockerfile  graphql.Dockerfile  measure.Dockerfile  measure.yaml  request-approve.Dockerfile  request-by-id.Dockerfile  request-create.Dockerfile  requests-by-account.Dockerfile  rule.Dockerfile  services.yaml  storage.yaml  transaction-by-id.Dockerfile  transactions-by-account.Dockerfile  warm-cache.Dockerfile
firebase-client/: client.js  index.js
graphql-faas/: index.js  package-lock.json  package.json  test-data
k8s/: balance-by-account.yml  client.yml  event.yml  graphql.yml  makefile  measure.yml  postgres.yml  redis.yml  request-approve.yml  request-by-id.yml  request-create.yml  requests-by-account.yml  rule.yml  transaction-by-id.yml  transactions-by-account.yml
liquibase/: Dockerfile  batch-liquibase.sh  batch.sh  changelog.xml  exec-liquibase.sh  liquibase.sh
make/: cloud-env.mk  docker.mk  ecr-lambda.mk  go.mk  rust.mk  shared.mk
measure-faas/: index.js  package.json
migrations/: README.md  makefile
notification/: crud.js  hub.js  ref.js
react/: .eslintrc.js  .gitignore  README.md  build.sh  deploy.sh  jest-puppeteer.config.js  jsconfig.json  makefile  package-lock.json  package.json  start.sh  test-e2e.sh  wallaby.js
rules-faas/: package.json
schema/: README.md  build.sh  deploy.sh  index.js  makefile  package.json  schema.sh
services/auto-confirm/: Cargo.toml  README.md  makefile
services/auto-confirm/cmd/: main.go
services/auto-confirm/src/: main.rs
services/auto-transact/: Cargo.toml  README.md  makefile
services/auto-transact/src/: lib.rs  main.rs
services/event/: Cargo.toml  README.md  makefile
services/event/src/: events.rs  main.rs
services/event/src/events/: cron.rs  gdp.rs  mod.rs  threshold_profit.rs
services/graphql/: Cargo.toml  README.md  gqlgen.yml  makefile  server.go
services/graphql/auth/: auth.go
services/graphql/graph/: generated.go  resolver.go  schema.graphqls  schema.resolvers.go
services/graphql/graph/model/: models_gen.go
services/graphql/postman/: docker.postman_environment.json  graphql.postman_collection.json  local.postman_environment.json
services/graphql/src/: main.rs
services/measure/: Cargo.toml  README.md  makefile
services/measure/src/: main.rs
services/request-approve/: Cargo.toml  README.md  makefile
services/request-approve/cmd/: main.go
services/request-approve/src/: main.rs
services/request-create/: Cargo.toml  README.md  makefile
services/request-create/cmd/: main.go
services/request-create/src/: main.rs
services/rule/: Cargo.toml  README.md  makefile
services/rule/src/: lib.rs  main.rs  rules.rs
services/rule/src/rules/: approval.rs  tokens.rs  transaction_item.rs  utils.rs
tests/: Cargo.toml  README.md  makefile  unit_tests.py
tests/src/: helpers.rs  integration_tests.rs  lib.rs  requests.rs
tests/testdata/: README.md  allRuleInstanceIDs.json  bottledWater.json  dbFirstTrItems.json  failFirstTrItems.json  getnotifications.json  intRules.json  nullFirstTrItems.json  nullFirstTrItemsNoAppr.json  requests.json  trItemWAppr.json  trItemWZeroAppr.json  trItemsNoAppr.json  transMultipleRules.json  transNoAppr.json  transWAppr.json  transWTimes.json
tests/thunder-tests/: thunderCollection.json  thunderclient.json
(+2200 files in other folders)
