[workspace]
resolver = "2"

members = [
	"crates/cognitoidp",
	"crates/httpclient",
	"crates/pg",
	"crates/service",
	"crates/shutdown",
	"crates/types",
	"services/auto-confirm",
	"services/balance-by-account",
	"services/event",
	"services/graphql",
	"services/measure",
	"services/request-approve",
	"services/request-by-id",
	"services/request-create",
	"services/requests-by-account",
	"services/rule",
	"services/transaction-by-id",
	"services/transactions-by-account",
	"tests",
]

[workspace.package]
rust-version = "1.75"
