[package]
name = "tests"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
dotenvy = "0.15.7"
graphql_client = "0.13.0"
reqwest = { version = "0.11.23", features = ["json"] }
serde = "1.0.195"
tokio = { version = "1.35.1", features = ["macros"] }
types = { path = "../crates/types" }
httpclient = { path = "../crates/httpclient" }
serde_json = "1.0.111"
gql_client = "1.0.7"
regex = "1.10.3"

[features]
integration_tests = []
