[package]
name = "tests"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
dotenvy = "0.15"
graphql_client = "0.15"
reqwest = { version = "0.13", features = ["json"] }
serde = "1.0"
tokio = { version = "1.49", features = ["macros"] }
types = { path = "../crates/types" }
httpclient = { path = "../crates/httpclient" }
serde_json = "1.0"
gql_client = "1.0"
regex = "1.12"
uribuilder = { path = "../crates/uribuilder" }
redisclient = { path = "../crates/redisclient" }
aws-config = "1.8"
aws-sdk-dynamodb = "1.101"

[features]
integration_tests = []
