[package]
name = "cognitoidp"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
jsonwebtoken = { version = "10.2", features = ["aws_lc_rs"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
