[package]
name = "ddbclient"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
description = "implements cache trait for dynamodb"

[dependencies]
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.101"
async-trait = "0.1"
serde_json = "1.0"
tracing = "0.1"
cache = { path = "../cache" }
types = { path = "../types" }
