[package]
name = "httpclient"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
aws-config = "1.1.1"
aws-credential-types = "1.1.1"
aws-sigv4 = "1.1.1"
aws-smithy-runtime-api = "1.1.1"
http = "0.2.0"
reqwest = { version = "0.11.23", features = ["json"] }

[dev-dependencies]
httpmock = "0.7.0"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["macros"] }
