[package]
name = "httpclient"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
aws-config = "1.8"
aws-credential-types = "1.2"
aws-sigv4 = "1.3"
aws-smithy-runtime-api = "1.10"
http = "1.4"
reqwest = { version = "0.13", features = ["json"] }

[dev-dependencies]
httpmock = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.49", features = ["macros"] }
