[package]
name = "pg"
version = "0.1.0"
edition = "2021"

[dependencies]
bb8 = "0.8.0"
bb8-postgres = "0.8.1"
tokio = "1.26.0"
async-trait = "0.1.73"
tokio-postgres = { version = "0.7.7", features = ["with-chrono-0_4"] }
types = { path = "../types" }
serde = { version = "1.0.152", features = ["derive"] }
serde-aux = { version = "4.4.0", default-features = false }

[dev-dependencies]
serde_json = "1.0.113"
serial_test = "*"
