[package]
name = "pg"
version = "0.1.0"
edition = "2021"

[dependencies]
bb8 = "0.8.0"
bb8-postgres = "0.8.1"
tokio = "1.26.0"
async-trait = "0.1.73"
tokio-postgres = { version = "0.7.7", features = [
	"with-chrono-0_4",
	"with-geo-types-0_7",
] }
types = { path = "../types" }
serde = { version = "1.0.152", features = ["derive"] }
serde-aux = { version = "4.4.0", default-features = false }
rust_decimal = { version = "1.34.3", features = ["db-tokio-postgres"] }
geo-types = "=0.7.0"
chrono = "0.4.23"

[dev-dependencies]
dotenvy = "0.15.7"
serde_json = "1.0.113"
serial_test = "*"
tokio = { version = "1.35.1", default-features = false, features = ["macros"] }
regex = "1.5.4"

[features]
db_tests = []
