[package]
name = "pg"
version = "0.1.0"
edition = "2021"

[dependencies]
bb8 = "0.9"
bb8-postgres = "0.9"
tokio = "1.49"
tokio-postgres = { version = "0.7", features = [
	"with-chrono-0_4",
	"with-geo-types-0_7",
] }
types = { path = "../types" }
serde = { version = "1.0", features = ["derive"] }
serde-aux = { version = "4.7", default-features = false }
rust_decimal = { version = "1.40", features = ["db-tokio-postgres"] }
geo-types = "0.7"
chrono = "0.4"
mockall = "0.14"

[dev-dependencies]
dotenvy = "0.15"
serde_json = "1.0"
serial_test = "3.3"
tokio = { version = "1.49", default-features = false, features = ["macros"] }
regex = "1.12"

[features]
db_tests = []
