[package]
name = "pubsub"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
description = "pubsub trait with redis and sns implementations"

[dependencies]
async-trait = "0.1.73"
thiserror = "2.0"
tracing = "0.1"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "sync"] }

# redis
fred = { version = "10.1", features = ["i-pubsub"] }
