[package]
name = "redisclient"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
fred = { version = "9.0.3", features = ["i-scripts", "i-pubsub"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
