[package]
name = "redisclient"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
description = "implements cache trait for redis"

[features]
cache_tests = []

[dependencies]
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
fred = { version = "10.1", features = ["i-scripts", "i-pubsub"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
serde_json = "1.0"
cache = { path = "../cache" }
types = { path = "../types" }
