[package]
name = "service"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
types = { path = "../types" }
rust_decimal = { version = "1.34.3", default-features = false }
httpclient = { path = "../httpclient" }
pg = { path = "../pg" }
cognitoidp = { path = "../cognitoidp" }
cache = { path = "../cache" }

[dev-dependencies]
mockall = "0.12.1"
tokio = { version = "1.35.1", default-features = false, features = ["macros"] }
