[package]
name = "service"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
types = { path = "../types" }
rust_decimal = { version = "1.40", default-features = false }
httpclient = { path = "../httpclient" }
pg = { path = "../pg" }
cognitoidp = { path = "../cognitoidp" }
cache = { path = "../cache" }

[dev-dependencies]
mockall = "0.14"
tokio = { version = "1.49", default-features = false, features = ["macros"] }
