[package]
name = "types"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
postgres-protocol = "0.6"
postgres-types = { version = "0.2", features = [
	"derive",
	"array-impls",
	"with-chrono-0_4",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.16", features = ["chrono_0_4"] }
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
tokio-postgres = { version = "0.7", default-features = false }
async-trait = "0.1"
async-graphql = { version = "7.1", features = ["chrono"] }
rust_decimal = { version = "1.40", features = ["db-tokio-postgres"] }
thiserror = "2.0"

[dev-dependencies]
bytes = "1.11"
time = { version = "0.3", features = ["formatting", "parsing"] }
serde_assert = "0.8"
