[package]
name = "auto-confirm"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
aws_lambda_events = "0.15.0"
lambda_runtime = "0.10.0"
rand = { version = "0.8.5", default-features = false, features = ["std"] }
serde_json = "1.0.114"
tokio = { version = "1.33.0", default-features = false, features = [
	"rt-multi-thread",
	"macros",
] }
unicode-segmentation = "1.11.0"
types = { path = "../../crates/types" }
pg = { path = "../../crates/pg" }
service = { path = "../../crates/service" }
rust_decimal = "1.34.3"
tracing = "0.1.40"
fakeit = "1.2.0"

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
