[package]
name = "auto-confirm"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
aws_lambda_events = { version = "1.0", default-features = false, features = [
	"cognito",
] }
lambda_runtime = "1.0"
rand = { version = "0.9", default-features = false, features = ["std", "std_rng"] }
serde_json = "1.0"
tokio = { version = "1.49", default-features = false, features = [
	"rt-multi-thread",
	"macros",
] }
unicode-segmentation = "1.12"
types = { path = "../../crates/types" }
pg = { path = "../../crates/pg" }
service = { path = "../../crates/service" }
rust_decimal = "1.40"
tracing = "0.1"
fakeit = "1.4"

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
