[package]
name = "event"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
tokio-postgres = "0.7"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
futures-channel = { version = "0.3", features = ["sink"] }
futures-util = { version = "0.3", features = ["sink"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = "1.40"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redisclient = { path = "../../crates/redisclient" }
