[package]
name = "event"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "time"] }
tokio-postgres = "0.7"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = "1.40"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
cache = { path = "../../crates/cache" }
pubsub = { path = "../../crates/pubsub" }
queue = { path = "../../crates/queue" }
pg = { path = "../../crates/pg" }
types = { path = "../../crates/types" }
shutdown = { path = "../../crates/shutdown" }
chrono = "0.4"
