[package]
name = "graphql"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
async-graphql = "7.0.0"
async-graphql-axum = "7.0.0"
axum = "0.7.4"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
types = { path = "../../crates/types" }
httpclient = { path = "../../crates/httpclient" }
serde_json = "1.0.111"
aws_lambda_events = { version = "0.13.0", default-features = false, features = [
	"apigw",
] }
tower-http = { version = "0.5.1", features = ["cors"] }
http = "1.0.0"
shutdown = { path = "../../crates/shutdown" }
futures-util = "0.3.30"
wsclient = { path = "../../crates/wsclient" }
tungstenite = { version = "0.24.0", default-features = false }
async-stream = "0.3.5"
uribuilder = { path = "../../crates/uribuilder" }

[target.x86_64-unknown-linux-musl.dependencies]
# https://github.com/cross-rs/cross/wiki/Recipes#vendored
openssl = { version = "0.10", features = ["vendored"] }
