[package]
name = "graphql"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
async-graphql = "7.1"
async-graphql-axum = "7.1"
axum = "0.8"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
types = { path = "../../crates/types" }
httpclient = { path = "../../crates/httpclient" }
serde_json = "1.0"
aws_lambda_events = { version = "1.0", default-features = false, features = [
	"apigw",
] }
tower-http = { version = "0.6", features = ["cors"] }
http = "1.4"
shutdown = { path = "../../crates/shutdown" }
futures-util = "0.3"
wsclient = { path = "../../crates/wsclient" }
tungstenite = { version = "0.28", default-features = false }
async-stream = "0.3"
uribuilder = { path = "../../crates/uribuilder" }

[target.x86_64-unknown-linux-musl.dependencies]
# https://github.com/cross-rs/cross/wiki/Recipes#vendored
openssl = { version = "0.10", features = ["vendored"] }
