[package]
name = "measure"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
shutdown = { path = "../../crates/shutdown" }
futures = "0.3.30"
serde = { version = "1.0.208", features = ["serde_derive"] }
pg = { path = "../../crates/pg" }
rust_decimal = "1.34.3"
http = "1.0.0"
redisclient = { path = "../../crates/redisclient" }
