[package]
name = "measure"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
shutdown = { path = "../../crates/shutdown" }
futures = "0.3"
serde = { version = "1.0", features = ["serde_derive"] }
pg = { path = "../../crates/pg" }
rust_decimal = "1.40"
http = "1.4"
redisclient = { path = "../../crates/redisclient" }
