[package]
name = "request-create"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
axum = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
thiserror = "2.0"
shutdown = { path = "../../crates/shutdown" }
pg = { path = "../../crates/pg" }
service = { path = "../../crates/service" }
types = { path = "../../crates/types" }
httpclient = { path = "../../crates/httpclient" }
uribuilder = { path = "../../crates/uribuilder" }
cache = { path = "../../crates/cache" }
ddbclient = { path = "../../crates/ddbclient" }
redisclient = { path = "../../crates/redisclient" }

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }