[package]
name = "rule"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.6.2"
tokio = { version = "1.33.0", default-features = false, features = [
	"rt-multi-thread",
	"macros",
	"signal"
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
types = { path = "../../crates/types" }
pg = { path = "../../crates/pg" }
chrono = "0.4.23"
nanoid = "0.4.0"
service = { path = "../../crates/service" }

[dev-dependencies]
regex = "1.0.0"
