[package]
name = "rule"
version = "0.1.0"
edition = "2021"
publish = false
rust-version.workspace = true

[dependencies]
axum = "0.6.2"
tokio = { version = "1.33.0", default-features = false, features = [
	"rt-multi-thread",
	"macros",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
types = { path = "../../crates/types" }
pg = { path = "../../crates/pg" }
chrono = "0.4.23"
nanoid = "0.4.0"
service = { path = "../../crates/service" }
shutdown = { path = "../../crates/shutdown" }

[dev-dependencies]
regex = "1.0.0"

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
